Fix iphone 5 spacing

--- a/css/main.css
+++ b/css/main.css
@@ -230,7 +230,7 @@ body.home_jobs .job:last-child {
 }
 
 #container {
-    padding-top: 50px;
+    /* padding-top: 50px; */
     text-align: center;
 }
 
